Service routes with swagger and RedisDB added
